--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
     "export": "next build&&next export",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
