--- a/package.json
+++ b/package.json
@@ -17,8 +17,9 @@
   "author": "allen",
   "license": "ISC",
   "dependencies": {
+    "autoprefixer": "^9.7.6",
     "classnames": "^2.2.6",
-    "next": "^9.3.1",
+    "next": "^9.3.4",
     "next-redux-wrapper": "^5.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
